force-app/main/default/objects/Offer__c/fields/Offer_Letter_Link__c.field-meta.xml
<CustomField>
    <fullName>Offer_Letter_Link__c</fullName>
    <label>Offer Letter Link</label>
    <type>Url</type>
</CustomField>